test/types/bytes/param/param-errors1.good
param-errors1.chpl:2: error: illegal cast from bytes to string
