test/types/bytes/param/param-errors1.chpl
// cannot cast a bytes to a string
param s1 = b"some bytes":string;
